--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mobot-js",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "scripts": {
     "build": "tsc",
     "pub": "sucrase-node pub.ts",
     "pub:minor": "sucrase-node pub.ts -m",
     "pub:Major": "sucrase-node pub.ts -M"
   },
-  "main": "dist/src/MobotJs.js",
+  "main": "./dist/src/MobotJs.js",
   "types": "./dist/src/MobotJs.d.ts",
   "devDependencies": {
     "@types/node": "^20.14.7",
